--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
@@ -42,7 +41,6 @@ connect.lock
 # System files
 .DS_Store
 Thumbs.db
-=======
 pom.xml
 pom.xml.asc
 *.jar
@@ -57,4 +55,5 @@ pom.xml.asc
 .lein-failures
 .nrepl-port
 .cpcache/
->>>>>>> 09c1011bc625a48310a41f22d8eec88715bdd3d9
+
+.angular/
