--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,9 +19,16 @@
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.1",
+    "@popperjs/core": "^2.11.6",
+    "angular-datatables": "^16.0.0",
     "bootstrap": "^5.3.1",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs5": "^1.11.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -31,7 +38,10 @@
     "@angular-devkit/build-angular": "^16.1.6",
     "@angular/cli": "~16.1.6",
     "@angular/compiler-cli": "^16.1.0",
+    "@angular/localize": "^16.1.0",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.9",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
